ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novagas
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    kubernetes.io/ingress.class: nginx
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: vermakunal.ga
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: novagas
            port:
              number: 80

#for ingress object we need ingress controller running in cluster.
